Add date filtering to daily satellite image date list Add cron job Update docs
